@@ -41,6 +41,11 @@ CVS code -
 	- Update copyright notices, as Thijs Kinkhorst's copyrights have
 	  now been assigned to the Free Software Foundation.  Changes to
 	  doc/man/rnano.1 and doc/man/fr/rnano.1. (DLR)
+	- Fix minor display and cursor placement problems when scrolling
+	  between pages at the statusbar prompt.  Changes to
+	  do_statusbar_mouse(), reset_statusbar_cursor(),
+	  update_statusbar_line(), and
+	  need_statusbar_horizontal_update(). (DLR)
 - chars.c:
   nstrncasecmp(), mbstrncasecmp()
 	- For efficiency, return zero immediately if s1 and s2 point to
